// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.user";
option java_outer_classname = "UserProto";
option objc_class_prefix = "HLW";

package user;

// The greeting service definition.
service User {
  // Sends a greeting
  rpc CreateProfile (ProfileRequest) returns (BaseReply) {}
  rpc UpdateProfile (ProfileRequest) returns (BaseReply) {}
  rpc GetProfile (GetProfileRequest) returns (GetProfileReply) {}
 }

// The request message containing the user's name.
message ProfileRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
}

// The response message containing the greetings
message BaseReply {
  string message = 1;
  string code = 2;
}


message GetProfileRequest {
  string user_id = 1;
}

message GetProfileReply {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
}